# win-desktop-utils-demo

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: main.rs
